--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@chatscope/chat-ui-kit-react": "^2.0.3",
+    "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.0",
+    "axios": "^1.7.9",
     "framer-motion": "^11.18.1",
     "react": "^18.3.1",
     "react-icons": "^5.4.0",
